--- a/src/lib/styles/articles.scss
+++ b/src/lib/styles/articles.scss
@@ -108,7 +108,7 @@ figure{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #00000063;
+    background: #ebf7ff;
     padding: 30px 0 10px;
 }
 
