Update Sass dependency and enhance navigation with new styles and layout

--- a/src/lib/styles/global.scss
+++ b/src/lib/styles/global.scss
@@ -51,6 +51,8 @@ img{
     --text-color: rgb(14, 14, 14);
     --focus: #2b5c63;
     --dp-color: #ffe2be;
+    --background-color: #f5f6fa;
+    --accent-color: #00a8ff;
 }
 
 html{
